After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712833 - Fixes for a few small memory leaks
Fixes for a few small memory leaks
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-21 17:21 UTC by Rui Matos
Modified: 2013-11-21 18:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
idle-monitor: Fix a GSList leak (906 bytes, patch)
2013-11-21 17:22 UTC, Rui Matos
committed Details | Review
xwayland: Fix a couple of small leaks (1.91 KB, patch)
2013-11-21 17:22 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-11-21 17:21:57 UTC
See patches.
Comment 1 Rui Matos 2013-11-21 17:22:00 UTC
Created attachment 260471 [details] [review]
idle-monitor: Fix a GSList leak
Comment 2 Rui Matos 2013-11-21 17:22:04 UTC
Created attachment 260472 [details] [review]
xwayland: Fix a couple of small leaks
Comment 3 Colin Walters 2013-11-21 17:29:29 UTC
Review of attachment 260471 [details] [review]:

Looks right.
Comment 4 Colin Walters 2013-11-21 17:32:36 UTC
Review of attachment 260472 [details] [review]:

Looks good.
Comment 5 Rui Matos 2013-11-21 18:29:58 UTC
Pushing the idle-monitor one also to master.

Attachment 260471 [details] pushed as 5ea443e - idle-monitor: Fix a GSList leak
Attachment 260472 [details] pushed as 8a3501f - xwayland: Fix a couple of small leaks