idle-monitor: Fix a GSList leak

https://bugzilla.gnome.org/show_bug.cgi?id=712833